--- a/css/float.css
+++ b/css/float.css
@@ -13,7 +13,7 @@ a {
   text-decoration: none;
 }
 
-button {
+.btn {
   font-weight: bold;
   padding: 10px;
   border: none;
@@ -22,31 +22,25 @@ button {
   background-color: #f7786b;
 }
 
-button:hover {
+.btn:hover {
   background-color: #f7cac9;
 }
 
 header {
   line-height: 0.8;
   z-index: 1;
+  border-bottom: 1px #f7cac9 solid;
 }
 
 footer {
+  text-align: center;
   background-color: #034f84;
-  color: #fff;
+  color: #f7cac9;
   padding: 10px;
-}
-
-h1 {
-  margin: 0;
 }
 
 .container {
   position: relative;
-}
-
-.ta-center { /* text align center */
-  text-align: center;
 }
 
 .inline { /* display inline */
@@ -96,10 +90,10 @@ h1 {
   height: 100%;
   padding: 0;
   margin: 0 10px 10px 10px;
-
 }
 
 .card {
+  text-align: center;
   background-color: #87bdd8;
   color: #034f84;
   font-size: .9em;
@@ -146,10 +140,6 @@ h1 {
   border: 1px #f7cac9 solid;
 }
 
-#navbar-ul {
-  left: 180px;
-}
-
 #navbar-ul li a {
   display: inline-block;
   padding: 22px 10px;
@@ -171,6 +161,7 @@ h1 {
 }
 
 #showcase {
+  text-align: center;
   height: 500px;
   background: url("https://get.pxhere.com/photo/background-calm-clouds-daylight-dock-environment-grass-lake-landscape-looking-man-mountain-mountains-outdoors-person-reflections-rocks-scenery-scenic-serene-sitting-sky-tranquil-trees-view-water-wooden-woods-1563785.jpg") no-repeat center/cover;
 }
@@ -225,6 +216,7 @@ article button {
 }
 
 #cards {
+  text-align: center;
   background-color: #034f84;
   margin: 120px auto;
   padding: 50px 0;
@@ -237,8 +229,111 @@ article button {
 #cards #act-heading {
   margin-bottom: 50px;
   font-size: 2em;
-  color: #fff;
+  color: #f7cac9;
   text-shadow: 3px 3px 2px #034f84;
 }
 
 
+@media (max-width: 910px) {
+
+  article {
+    font-size: 1.4em;
+  }
+
+  .article-content,
+  article img {
+    float: none !important;
+    width: 100% !important;
+  }
+
+  article img {
+    margin: auto !important;
+    text-align: center;
+  }
+
+  article h2 {
+    display: block;
+    text-align: center;
+    margin: 20px;
+    padding: 0em;
+  }
+
+  article p {
+    margin-bottom: 30px;
+  }
+  
+  article button {
+    display: block;
+    margin: auto;
+    width: 30%;
+  }
+}
+
+@media (max-width: 768px) {
+
+  article {
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 650px) {
+
+  header {
+    text-align: center;
+  }
+
+  header h2 {
+    display: inline;
+    margin: 5px !important;
+    padding: 2px !important;
+  }
+
+  ul {
+    display: block !important;
+    position: relative !important;
+    width: 100%;
+    margin-left: 0;
+  }
+
+  ul li a {
+    padding: 10px !important;
+    margin: 0 !important;
+  }
+
+  #profile-pic {
+    float: none !important;
+    right: -5px;
+    top: 12px;
+  }
+}
+
+@media (max-width: 500px) {
+
+  ul, li, a {
+    display: block !important;
+  }
+
+  #profile-pic {
+    right: 1px;
+    top: 4px;
+  }
+
+  article p {
+    margin: 1px 1px 20px !important;
+  }  
+}
+
+@media (min-width: 1px) {
+  article, .card {
+    margin-top: 30px;
+  }
+
+  article {
+    padding: 20px 0;
+  }
+
+  article button {
+    min-width: 150px;
+    margin-bottom: 20px;
+  }
+}
