--- a/css/float.css
+++ b/css/float.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #b1cbbb;
 }
 
@@ -93,11 +95,58 @@ a {
   border-radius: 0;
 }
 
+.fa {
+  padding: 20px;
+  font-size: 35px;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+#social-media {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+}
+
 header {
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
   line-height: 0.8;
-  z-index: 1;
+  z-index: 1000;
   border-bottom: 1px #f7cac9 solid;
 }
 
@@ -111,11 +160,13 @@ header nav h2, header nav ul {
 }  
 
 header nav h2 {
+  cursor: pointer;
   margin: 20px;
   color: #f7786b;
 }
 
 header nav img {
+  cursor: pointer;
   position: absolute;
   right: 10px;
   top: 9px;
@@ -123,6 +174,20 @@ header nav img {
   height: 40px;
   border-radius: 50%;
   border: 1px #f7cac9 solid;
+}
+
+.trans1, .trans2 {
+  transition: transform 0.3s;
+  z-index: 2;
+}
+
+
+.trans1:hover {
+  transform: scale(1.3);
+}
+
+.trans2:hover {
+  transform: scale(1.1);
 }
 
 header nav ul {
@@ -148,12 +213,21 @@ header nav ul li a:hover {
 #showcase {
   text-align: center;
   height: 500px;
-  background: url("https://get.pxhere.com/photo/background-calm-clouds-daylight-dock-environment-grass-lake-landscape-looking-man-mountain-mountains-outdoors-person-reflections-rocks-scenery-scenic-serene-sitting-sky-tranquil-trees-view-water-wooden-woods-1563785.jpg") no-repeat center/cover;
+  background: linear-gradient(to top, transparent, transparent, #034f84), url("https://get.pxhere.com/photo/background-calm-clouds-daylight-dock-environment-grass-lake-landscape-looking-man-mountain-mountains-outdoors-person-reflections-rocks-scenery-scenic-serene-sitting-sky-tranquil-trees-view-water-wooden-woods-1563785.jpg") no-repeat center/cover;
+  box-shadow: 15px 15px 15px #888888,
+  -15px -15px 15px #888888,
+  15px -15px 15px #888888,
+  -15px 15px 15px #888888;
 }
 
 #showcase h1,
 #showcase p {
   display: block;
+}
+
+#showcase h1 {
+  font-size: 2.5em;
+  font-family: 'Berkshire Swash', cursive;
 }
 
 #showcase p {
@@ -168,6 +242,10 @@ header nav ul li a:hover {
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+}
+
+#pre1, #pre2 {
+  height: 50px;
 }
 
 #articles {
@@ -219,10 +297,16 @@ article img {
 }
 
 footer {
-  text-align: center;
+  font-size: 1.2em;
   background-color: #034f84;
   color: #f7cac9;
+  height: 80px;
   padding: 10px;
+}
+
+footer address, footer p {
+  display: inline-block;
+  margin: 22px 20px;
 }
 
 @media (max-width: 910px) {
@@ -259,6 +343,13 @@ footer {
   }
 }
 
+:target + .container {
+  box-shadow: 20px 20px 15px #034f84,
+  -20px -20px 15px #034f84,
+  20px -20px 15px #034f84,
+  -20px 20px 15px #034f84 !important;
+}
+
 @media (max-width: 768px) {
   article {
     font-size: 1em;
@@ -292,11 +383,19 @@ footer {
     right: 3px;
     top: 12px;
   }
+
+  .card {
+    transition: none;
+  }
+
+  .card:hover {
+    transform: none;
+  }
 }
 
 @media (max-width: 500px) {
   header nav ul, header nav ul li, header nav ul a {
-    display: block;
+    display: block !important;
   }
 
   #profile-pic {
@@ -306,7 +405,7 @@ footer {
 
   article p {
     margin: 1px 1px 20px;
-  }  
+  }
 }
 
 @media (min-width: 1px) {
@@ -323,3 +422,4 @@ footer {
     margin-bottom: 20px;
   }
 }
+
