ready to refactoring

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -20,6 +20,14 @@ a {
   color: #f7cac9;
 }
 
+span a{
+  -webkit-text-stroke: .8px #fff; 
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #f18973;
+  text-shadow: 5px 5px 3px #337, -5px 5px 3px #337;
+}
+
 .container {
   display: flex;
   flex-direction: row;
@@ -229,10 +237,6 @@ header nav img {
   font-size: 1.5em;
 }
 
-#pre1, #pre2 {
-  height: 100px;
-}
-
 article {
   flex-direction: column;
   background-color: #034f84;
@@ -308,14 +312,19 @@ footer #footer-content {
 
 @media (max-width: 1000px) {
 
+  #foo {
+    flex-direction: column;
+  }
+
   #footer-content {
+    order: 1 !important;
     width: 100%;
     margin: auto;
     text-align: center;
   }
 
   #social-media {
-    text-align: center;
+    margin: auto;
   }
 
   footer {
@@ -438,22 +447,11 @@ footer #footer-content {
   }
 
   #showcase {
-    margin-top: 140px;
-
+    margin-top: 70px;
   }
 
   article p {
     margin: 1px 1px 20px;
-  }
-}
-
-@media (max-width: 450px) {
-  footer {
-    height: 125px;
-  }
-
-  #social-media {
-    font-size: .9em;
   }
 
   .fa {
@@ -462,13 +460,26 @@ footer #footer-content {
   }
 }
 
+@media (max-width: 450px) {
+
+  #showcase {
+    margin-top: 80px;
+  }
+
+  #social-media {
+    font-size: .9em;
+  }
+
+}
+
 @media (max-width: 400px) {
   header nav ul {
     flex-direction: column !important;
     height: 80px;
   }
 
-  header nav ul li {
+  #showcase {
+    margin-top: 140px;
   }
   
   header nav ul li a {
