modifications in navbar with window onscroll

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -181,7 +181,7 @@ header nav ul li a {
   padding: 20px 10px 18px;
 }
 
-header nav ul li a:hover {
+.active, header nav ul li a:hover {
   background-color: #92a8d1;
   color: #f0f0f0;
   border-bottom: 3px #c94c4c solid;
